--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,19 @@
 	font-size: 16px;
 }
 
+.color0 {
+ color: blue;
+
+}
+
+.color1 {
+color: brown;
+}
+
+.color2 {
+  color: grey;
+}
+
 #googledrive {
 
 /*   Wanted to use Product Sans for the second word in Google Drive, but it is a 
